--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.51.0",
+    "sass": "^1.52.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate": "plop"
+    "plop": "plop"
   },
   "eslintConfig": {
     "extends": [
